<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label"
        android:textSize="@dimen/text_label_size"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txt_submitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/submitted_text_marginTop"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/submitted_text_size"
        tools:text="Sample Text"/>

</LinearLayout>